[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.0.2"
description = "Python client library for moondream"
authors = [ "vik <vik@moondream.ai>",]
readme = "README.md"
name = "moondream"
[[tool.poetry.packages]]
include = "moondream"
from = "."

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingParameterType = false

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.4.0"
numpy = "^2.1.2"
tokenizers = "^0.20.1"
torch = "^2.2.0"
safetensors = "^0.4.2"
einops = "^0.7.0"
pyvips = "^2.2.1"
onnxruntime = "^1.19.2"

[tool.poetry.scripts]
moondream = "moondream.cli:main"
