[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "moondream"
version = "0.0.2"
description = "Python client library for moondream"
authors = [ "M87 Labs <contact@moondream.ai>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "moondream"
from = "."

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingParameterType = false

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.4.0"
numpy = "^2.1.2"
onnxruntime = { version = ">=1.19.2", optional = true }
tokenizers = { version = ">=0.20.1", optional = true }
torch = { version = ">=2.5.0", optional = true }
safetensors = { version = ">=0.4.2", optional = true }
einops = { version = ">=0.7.0", optional = true }
pyvips-binary = { version = ">=8.16.0", optional = true }
pyvips = { version = ">=2.2.1", optional = true }

[tool.poetry.extras]
cpu = [
    "onnxruntime",
    "tokenizers"
]
gpu = [
    "torch",
    "safetensors",
    "einops",
    "pyvips-binary",
    "pyvips",
    "tokenizers"
]

[tool.poetry.scripts]
moondream = "moondream.cli:main"
