[tool.poetry]
name = "moondream"
version = "0.0.1"
description = "Python client library for moondream"
authors = ["vik <vik@moondream.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ggml-python = "0.0.37"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
gguf = "^0.10.0"
sentencepiece = "^0.2.0"
safetensors = "^0.4.5"
numpy = "^1.17.0"        # gguf doesn't work with numpy 2.0+
transformers = "^4.45.1"

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingParameterType = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
